service BetService {
  rpc SettleBet (SettleBetRequest) returns (SettleBetResponse);
}

message SettleBetRequest {
  required string betId = 1;
  required string result = 2;
}

message SettleBetResponse {
  required bool OK = 1;
  required bool winner = 2;
}